--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#0A0A0A</color>
+    <color name="white">#F1F0F0</color>
+    <color name="bluePrimary">#029ADD</color>
+    <color name="blueSecondary">#1766AB</color>
+    <color name="grayLight">#E0E0E0</color>
 </resources>
